update documentation again, provide fix for extra gap on twin layout when no nav is present.

--- a/site/site.scss
+++ b/site/site.scss
@@ -111,7 +111,7 @@ html {
     border: 1px solid $border;
     border-radius: $border-radius-lg;
     padding: $spacer-5;
-    min-width: 60vw;
+    min-width: 70vw;
     max-width: 90vw;
     max-height: 85vh;
     background-color: #fff;
