--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,6 @@
 $grail-class-prefix: "" !default;
 $side-bar-width-desktop: 260px !default;
+$standard-main-width-wide: 768px !default;
 $side-bar-width-wide: 300px !default;
 $layout-gap-inline: var(--grail-layout-gap-inline) !default;
 $layout-gap-block: var(--grail-layout-gap-block) !default;
